--- a/pl/edu/agh/iisg/to/javafx/lab2_cw3/view/TransactionEditDialog.fxml
+++ b/pl/edu/agh/iisg/to/javafx/lab2_cw3/view/TransactionEditDialog.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.GridPane?>
 
-<BorderPane prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.iisg.to.javafx.cw3.view.TransactionEditDialogController">
+<BorderPane prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.iisg.to.javafx.lab2_cw3.view.TransactionEditDialogController">
 	<center>
 		<GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
 			<columnConstraints>
